--- a/src/about.html
+++ b/src/about.html
@@ -56,7 +56,7 @@
                         </li>
 
                         <li>
-                            <h3>By partnering with local liquor retailers, we are able to deliver alchohol right to your doorstep.</h3>
+                            <h3>By partnering with local liquor retailers, we are able to deliver alcohol right to your doorstep.</h3>
                         </li>
                     </ul>
                 </div>
